override opts; own appropriate directories