@@ -1,4 +1,4 @@
-Role Name
+Ansible Role: Fedora Commons
 =========
 
 Installs and configures the Fedora Commons repository platform
@@ -16,7 +16,35 @@ However, this role only supports Tomcat at this time.
 Role Variables
 --------------
 
-TBD
+    java_version:           1.8
+    minimum_heap_size:      512
+    maximum_heap_size:      1024
+    fcrepo_home:            "/etc/fcrepo/data"
+    fcrepo_config_dir:      "/etc/fcrepo"
+    fcrepo_log_dir:         "/var/log/fcrepo"
+    fcrepo_major_version:   4
+    fcrepo_version:         4.7.0
+    fcrepo_url:             "https://github.com/fcrepo{{ fcrepo_major_version }}/fcrepo{{ fcrepo_major_version }}/releases/download/fcrepo-{{ fcrepo_version }}/fcrepo-webapp-{{ fcrepo_version }}.war"
+    fcrepo_checksum_algo:   "sha1"
+    fcrepo_checksum_url:    "{{ fcrepo_url }}.{{ fcrepo_checksum_algo }}"
+    tomcat_install_dir:     "/usr/local"
+    catalina_home:          "{{ tomcat_install_dir }}/tomcat"
+    webapps_dir:            "{{ catalina_home }}/webapps"
+    app_user:               "tomcat"
+    java_opts:              "-Djava.awt.headless=true
+                            -Dfile.encoding=UTF-8
+                            -Dfcrepo.home={{ fcrepo_home }}
+                            -Dfcrepo.modeshape.configuration=classpath:/config/file-simple/repository.json
+                            -Dlogback.configurationFile={{ fcrepo_config_dir }}/logback.xml
+                            -XX:+UseConcMarkSweepGC
+                            -XX:+CMSClassUnloadingEnabled
+                            -XX:ConcGCThreads=5
+                            -XX:MaxGCPauseMillis=200
+                            -XX:ParallelGCThreads=20
+                            -XX:MaxMetaspaceSize=512M
+                            -Xms{{ minimum_heap_size }}m
+                            -Xmx{{ maximum_heap_size }}m"
+    catalina_opts:          "-server"
 
 Dependencies
 ------------
